--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">PonyRacer</a>
-    <button (click)="toggleNavbar()" type="button" class="navbar-toggler">
+    <a class="navbar-brand" routerLink="/">PonyRacer</a>
+    <button type="button" class="navbar-toggler" (click)="toggleNavbar()">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div id="navbar" [class.collapse]="navbarCollapsed" class="navbar-collapse">
+    <div id="navbar" class="navbar-collapse" [class.collapse]="navbarCollapsed">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link">Races</a>
+          <a class="nav-link" routerLink="/races">Races</a>
         </li>
       </ul>
     </div>
