--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
 
 <div class="text-center">
   <a class="btn btn-large btn-primary" routerLink="/login">Login</a>
+  <a class="btn btn-large btn-primary" routerLink="/register">Register</a>
 </div>
