--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -41,10 +41,10 @@
 
       <div class="mb-3">
         <label for="birth-year" class="form-label">Birth year</label>
-        <input id="birth-year" class="form-control" type="number" formControlName="birthYear" />
+        <pr-birth-year-input inputId="birth-year" formControlName="birthYear" />
         @if (birthYearCtrl.dirty && birthYearCtrl.hasError('required')) {
           <div id="birth-year-required-error" class="invalid-feedback">Birth year is required</div>
-        } @else if (birthYearCtrl.dirty && (birthYearCtrl.hasError('min') || birthYearCtrl.hasError('max'))) {
+        } @else if (birthYearCtrl.dirty && birthYearCtrl.hasError('invalidYear')) {
           <div id="birth-year-invalid-error" class="invalid-feedback">This is not a valid year</div>
         }
       </div>
