--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
+/* You can add global styles to this file, and also import other style files */
 @import 'bootstrap/dist/css/bootstrap.css';
 @import '@fortawesome/fontawesome-free/css/all.css';
 
-input.ng-dirty.ng-invalid {
-    border: 1px solid red;
+input.ng-dirty.ng-invalid,
+pr-birth-year-input.ng-dirty.ng-invalid input {
+  border: 1px solid red;
 }
-  
+
 .invalid-feedback {
-    display: block;
+  display: block;
 }
