--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,6 +19,11 @@
               {{ user.money | number }}
             </span>
           </li>
+          <li class="nav-item">
+            <button (click)="logout()" id="logout-link" type="button" class="btn nav-link" aria-label="Logout">
+              <span class="fa fa-power-off"></span>
+            </button>
+          </li>
         </ul>
       }
     </div>
