--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="text-center">
-  @if (user) {
+  @if (user()) {
     <a class="btn btn-large btn-primary" routerLink="/races">Races</a>
   } @else {
     <a class="btn btn-large btn-primary" routerLink="/login">Login</a>
