--- a/src/app/races/races.component.html
+++ b/src/app/races/races.component.html
@@ -1,3 +1,6 @@
 @for (race of races; track race.id) {
-  <pr-race [raceModel]="race"></pr-race>
+  <div>
+    <pr-race [raceModel]="race" />
+    <a [routerLink]="['/races', race.id]" class="btn btn-primary mb-2">Bet on {{ race.name }}</a>
+  </div>
 }
