--- a/src/app/bet/bet.component.html
+++ b/src/app/bet/bet.component.html
@@ -7,6 +7,7 @@
   }
   <h1>{{ raceModel.name }}</h1>
   <p>{{ raceModel.startInstant | fromNow }}</p>
+  <a class="btn btn-primary" [routerLink]="['/races', raceModel.id, 'live']">Watch live!</a>
   <div class="py-2">Click to bet on your favorite pony</div>
   <div class="row">
     @for (pony of raceModel.ponies; track pony.id) {
